--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,11 +25,10 @@
 html,
 body {
   position: relative;
-  height: 100%;
 }
 
 body {
-  background: #eee;
+  background: #1c1d20;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
@@ -37,23 +36,104 @@ body {
   padding: 0;
 }
 
-.swiper {
-  width: 100%;
-  height: 100%;
+.swiper-slide {
+  display: flex;
+  flex-direction: column;
+  height: 812px;
+
+  box-sizing: border-box;
 }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
+/* =================prescription====================== */
+.swipe-prescription {
+  padding: 32px;
+  background: #fafafa;
+  border-radius: 24px 24px 0 0;
+  margin: 32px 16px 0;
+}
+.list-tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+  margin-bottom: 96px;
+}
+.list-tags-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  border: 1px solid rgba(28, 29, 32, 0.2);
+  border-radius: 60px;
+  padding: 13px 18px;
+
+  height: 45px;
+  box-sizing: border-box;
+}
+.list-tags-item p {
+  font-size: 16px;
+}
+.prescription-title {
+  font-size: 24px;
+  line-height: 1.16667;
+  letter-spacing: -0.03em;
+  margin-bottom: 45px;
+}
+.prescription-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  border: none;
+  border-radius: 60px;
+  padding: 13px 32px;
+  width: 141px;
+  height: 45px;
+  background: #ed3b44;
+  color: #fafafa;
+}
+
+/* ====================img-================================= */
+.swipe-img {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-content: center;
+  border-radius: 0 0 24px 24px;
+  margin: 0px 16px;
+  height: 395px;
+  background: #242527;
 }
-
 .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* ===============btns========================== */
+
+.btn-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  margin-top: 32px;
+}
+.nav-btn {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  border: 1px solid rgba(250, 250, 250, 0.5);
+  border-radius: 60px;
+  padding: 14px;
+  width: 52px;
+  height: 52px;
+  box-sizing: border-box;
+}
+.nav-btn::after {
+  content: '';
 }
